maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: not found: value Tx
    setIndication(x,y-1,Math.min(k+1,getIndication(x,y-1)));Tx(0)=x;Ty(0)=y-1
                                                            ^JediEscaper:9: error: not found: value Ty
    setIndication(x,y-1,Math.min(k+1,getIndication(x,y-1)));Tx(0)=x;Ty(0)=y-1
                                                                    ^JediEscaper:15: error: not found: value Tx
        setIndication(x-1,y,Math.min(k+1,getIndication(x-1,y)));Tx(1)=x-1;Ty(1)=y
                                                                ^JediEscaper:15: error: not found: value Ty
        setIndication(x-1,y,Math.min(k+1,getIndication(x-1,y)));Tx(1)=x-1;Ty(1)=y
                                                                          ^JediEscaper:20: error: not found: value Tx
      setIndication(x,y+1,Math.min(k+1,getIndication(x,y+1)));Tx(2)=x;Ty(2)=y+1
                                                              ^JediEscaper:20: error: not found: value Ty
      setIndication(x,y+1,Math.min(k+1,getIndication(x,y+1)));Tx(2)=x;Ty(2)=y+1
                                                                      ^JediEscaper:25: error: not found: value Tx
      setIndication(x,y+1,Math.min(k+1,getIndication(x+1,y)));Tx(3)=x+1;Ty(3)=y
                                                              ^JediEscaper:25: error: not found: value Ty
      setIndication(x,y+1,Math.min(k+1,getIndication(x+1,y)));Tx(3)=x+1;Ty(3)=y
                                                                        ^JediEscaper:29: error: not found: value Tx
    if (Tx(i)!= -1) {
        ^JediEscaper:30: error: not found: value Tx
      casP(Tx(i),Ty(i),k+1)
           ^JediEscaper:30: error: not found: value Ty
      casP(Tx(i),Ty(i),k+1)
                 ^